--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Admin Panel of ActivTips">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
